fix title alignment

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -490,8 +490,9 @@
   opacity: 10%;
   font-size: 30px; 
   font-weight: 800;
-  position: fixed;
-  left: 45%;
+  left: 14%;
+  display: flex;
+  position: relative;
   text-align: center;
   justify-content: center;
   user-select: none;
